--- a/public/landing.css
+++ b/public/landing.css
@@ -10,54 +10,54 @@ a:hover {
     cursor: pointer;
 }
 
-#logo {
+.navbar {
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.logo a {
     color: #FFF;
-    font-family: Poppins;
+    font-family: 'Poppins', sans-serif;
     font-size: 35px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     margin-top: 23px;
-    margin-left: 170px;
-    position: fixed;
+    margin-left: 20px;
+    text-decoration: none;
 }
 
-#find-btn {
-    margin-top: 30px;
-    margin-left: 1124px;
-    position: fixed;
+.nav-buttons button {
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 10px;
     padding: 11px 22px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
     border-radius: 8px;
-    background: #FFF;
-    border: 0;
-    color: #000;
-    font-family: Inter;
     font-size: 14px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
-}
-
-#employ-btn {
-    margin-top: 30px;
-    margin-left: 1256px;
-    position: fixed;
-    padding: 11px 22px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 8px;
     background: #2341D5;
-    border: 0;
     color: #FFF;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+}
+
+/* Media Query for Mobile Devices */
+@media screen and (max-width: 600px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-buttons {
+        margin-top: 10px;
+    }
+
+    .nav-buttons button {
+        margin-left: 0;
+        margin-top: 5px;
+    }
 }
 
 #title1 {
