--- a/public/login.css
+++ b/public/login.css
@@ -9,53 +9,54 @@ button:hover{
     height: 100px;
     background-color: #000;
 }
-#logo{
-    color: #fff;
-    font-family: Poppins;
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-top: 23px;
-    margin-left: 170px;
-    position: fixed;
-}
-#find-btn{
-    margin-top: 30px;
-    margin-left: 1124px;
-    position: fixed;
-    padding: 11px 22px;
-    justify-content: center;
+.navbar {
+    background-color: #000;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
-    border-radius: 8px;
-    background: #FFF;
-    border: 0;
-    color: #000;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+    padding: 10px 20px;
 }
 
-#employ-btn{
-    margin-top: 30px;
-    margin-left: 1256px;
-    position: fixed;
-    padding: 11px 22px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 8px;
-    background: #2341D5;
-    border: 0;
+.logo a {
     color: #FFF;
-    font-family: Inter;
+    font-family: 'Poppins', sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    margin-top: 23px;
+    margin-left: 20px;
+    text-decoration: none;
+}
+
+.nav-buttons button {
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 10px;
+    padding: 11px 22px;
+    border-radius: 8px;
     font-size: 14px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
+    background: #2341D5;
+    color: #FFF;
+}
+
+/* Media Query for Mobile Devices */
+@media screen and (max-width: 600px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-buttons {
+        margin-top: 10px;
+    }
+
+    .nav-buttons button {
+        margin-left: 0;
+        margin-top: 5px;
+    }
 }
 #login-title {
     margin-top: 50px;
