--- a/public/login.css
+++ b/public/login.css
@@ -59,59 +59,58 @@ button:hover{
     }
 }
 #login-title {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 187px;
-    position: fixed;
     color: #000;
     font-family: Inter;
     font-size: 30px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
-}
+  }
 
-#label1, #label2 {
+  #label1,
+  #label2 {
     color: #000;
     font-family: Inter;
     font-size: 18px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
     position: relative;
-    margin-bottom: 5px; 
-}
+    margin-bottom: 5px;
+    margin-top: 2px;
+  }
 
-#login-form {
-    margin-top: 100px;
+  #login-form {
+    margin-top: 30px;
     margin-left: 191px;
     display: flex;
-    flex-direction: column; 
-    position: fixed;
-}
+    flex-direction: column;
+    position: relative;
+  }
 
-#companyemail, #companypassword {
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
     width: 360px;
     padding: 14px 15px;
     border-radius: 7px;
     border: 1px solid #000;
-    background: #FFF;
+    background: #fff;
     box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.10);
-    margin-bottom: 15px; 
-}
+    margin-bottom: 15px;
+  }
 
-#continue-btn {
+  #continue-btn {
     width: 136px;
     height: 45px;
     padding: 12px 34px;
     border-radius: 12px;
-    background: #2341D5;
+    background: #2341d5;
     box-shadow: 0px 1px 25px 4px rgba(0, 0, 0, 0.10);
-    color: #FFF;
+    color: #fff;
     font-family: Inter;
     font-size: 18px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
     border: 0;
-    margin-top: 15px; /* Add some spacing between the form inputs and the button */
-}
+  }
